feat: update isValidSudoku.md

--- a/questions/36. isValidSudoku.md
+++ b/questions/36. isValidSudoku.md
@@ -59,15 +59,19 @@
  @return {boolean}
   */
 var isValidSudoku = function (board) {
-  let set = new Set();
+  const set = new Set();
   for (let i = 0; i < 9; i++) {
     for (let j = 0; j < 9; j++) {
       const number = board[i][j];
-      if (number === '.') continue;
+      if (number === '.') {
+        continue;
+      }
       const colStr = `${number}c${i}`;
       const rowStr = `${number}r${j}`;
       const sectionStr = `${number}s(${Math.floor(i / 3)},${Math.floor(j / 3)})`;
-      if (set.has(colStr) || set.has(rowStr) || set.has(sectionStr)) return false;
+      if (set.has(colStr) || set.has(rowStr) || set.has(sectionStr)) {
+        return false;
+      }
       set.add(colStr);
       set.add(rowStr);
       set.add(sectionStr);
@@ -79,7 +83,7 @@ var isValidSudoku = function (board) {
 
 思路：遍历整个数组。
 因数独游戏特性可知，该数字需要满足：
-在该行仅出现一次 --> colStr = ${number}c${i};
-在该列仅出现一次 --> rowStr = ${number}r${j};
-在该 3\*3 区块仅出现一次 --> sectionStr = ${number}s(${Math.floor(i/3)},${Math.floor(j/3)});
-创建 set 用于保存上述未出现的字符串，如果重复出现则为无效数独。
+在该行仅出现一次 --> `colStr` = `${number}c${i}`;
+在该列仅出现一次 --> `rowStr` = `${number}r${j}`;
+在该 `3*3` 区块仅出现一次 --> `sectionStr` = `${number}s(${Math.floor(i/3)},${Math.floor(j/3)})`;
+创建 `set` 用于保存上述未出现的字符串，如果重复出现则为无效数独。
