--- a/questions/20. isValid.md
+++ b/questions/20. isValid.md
@@ -47,27 +47,28 @@
  */
 var isValid = function (s) {
   const stack = [];
-  const n = s.length;
-  for (let i = 0; i < n; i++) {
+  const strLength = s.length;
+  for (let i = 0; i < strLength; i++) {
     const chat = s.charAt(i);
-    if (chat == '(') {
-      stack.push(')');
-    } else if (chat == '[') {
-      stack.push(']');
-    } else if (chat == '{') {
-      stack.push('}');
+    if (chat === '(') {
+      stack.push(')'); // [')']
+    } else if (chat === '[') {
+      stack.push(']'); // [']', ')']
+    } else if (chat === '{') {
+      stack.push('}'); // ['}', ']', ')']
     } else {
       const str = stack.pop();
-      if (str != chat) return false;
+      if (str !== chat) {
+        return false;
+      }
     }
   }
-  return stack.length == 0;
+  return stack.length === 0;
 };
 ```
 
 思路：
 
-1. 利用栈的特性，时间复杂度 O(n)，空间复杂度 O(n)
+1. 利用栈的特性，先进后出
 2. 遍历字符串，如果是左括号，则将对应的右括号入栈；如果是右括号，则将栈顶元素出栈并判断是否相等
 3. 遍历结束后，如果栈为空，则说明括号匹配成功，返回 `true`；否则，返回 `false`
-4. 如果栈为空，说明没有左括号，直接返回 `false`
