feat: 修改 搜索二维矩阵.md

--- a/questions/74. 搜索二维矩阵.md
+++ b/questions/74. 搜索二维矩阵.md
@@ -2,11 +2,11 @@
 
 ### 0. 题面
 
-给你一个满足下述两条属性的 m x n 整数矩阵：
+给你一个满足下述两条属性的 `m` `x` `n` 整数矩阵：
 
 每行中的整数从左到右按非严格递增顺序排列。
 每行的第一个整数大于前一行的最后一个整数。
-给你一个整数 target ，如果 target 在矩阵中，返回 true ；否则，返回 false 。
+给你一个整数 `target` ，如果 `target` 在矩阵中，返回 `true` ；否则，返回 `false` 。
 
 **示例 1:**
 
@@ -94,4 +94,4 @@ var searchMatrix = function (matrix, target) {
 
 - 遍历二维数组，检查是否在当前行
 - 如果在当前行，再使用二分查找查找目标值
-- 时间复杂度 O(mlogn)，空间复杂度 O(1)
+- 时间复杂度 `O(mlogn)`，空间复杂度 `O(1)`
