--- a/questions/347. 前 K 个高频元素.md
+++ b/questions/347. 前 K 个高频元素.md
@@ -1,8 +1,8 @@
-#### 347、前 K 个高频元素
+## 347、前 K 个高频元素
 
 ### 0. 题面
 
-给你一个整数数组 nums 和一个整数 k ，请你返回其中出现频率前 k 高的元素。你可以按 任意顺序 返回答案。
+给你一个整数数组 `nums` 和一个整数 `k` ，请你返回其中出现频率前 `k` 高的元素。你可以按任意顺序返回答案。
 
 **示例 1:**
 
