--- a/questions/217. 存在重复元素.md
+++ b/questions/217. 存在重复元素.md
@@ -1,8 +1,8 @@
-#### 218、存在重复元素
+## 218、存在重复元素
 
 ### 0. 题面
 
-给你一个整数数组 nums 。如果任一值在数组中出现 至少两次 ，返回 true ；如果数组中每个元素互不相同，返回 false 。
+给你一个整数数组 `nums` 。如果任一值在数组中出现至少两次 ，返回 `true` ；如果数组中每个元素互不相同，返回 `false` 。
 
 **示例 1:**
 
